# Copyright (C) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//foundation/distributeddatamgr/pasteboard/pasteboard.gni")

ohos_shared_library("pasteboard_napi") {
  include_dirs = [
    "${pasteboard_innerkits_path}/include",
    "//foundation/distributeddatamgr/pasteboard/framework/tlv",
    "${ability_runtime_napi_path}/inner/napi_common",
    "napi/include",
  ]

  cflags = [
    "-fPIC",
    "-g3",
  ]

  sources = [
    "napi/src/async_call.cpp",
    "napi/src/napi_init.cpp",
    "napi/src/napi_pasteboard.cpp",
    "napi/src/napi_pastedata.cpp",
    "napi/src/napi_pastedata_record.cpp",
    "napi/src/paste_board_dialog.cpp",
    "napi/src/pasteboard_common.cpp",
  ]

  deps = [
    "//foundation/arkui/ace_engine/interfaces/inner_api/ui_service_manager:ui_service_mgr",
    "//foundation/arkui/napi/:ace_napi",
    "//foundation/distributeddatamgr/pasteboard/framework/dialog_ui/js:dialog_js_files_etc",
    "//foundation/distributeddatamgr/pasteboard/framework/innerkits:pasteboard_client",
    "//third_party/libuv:uv",
  ]

  external_deps = [
    "ability_base:want",
    "ability_base:zuri",
    "ability_runtime:abilitykit_native",
    "c_utils:utils",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "multimedia_image_standard:image",
  ]

  relative_install_dir = "module"

  subsystem_name = "distributeddatamgr"
  part_name = "pasteboard"
}
